--- a/app/translations/zh_TW/LC_MESSAGES/messages.po
+++ b/app/translations/zh_TW/LC_MESSAGES/messages.po
@@ -1,4 +1,4 @@
-# Chinese translations for PROJECT.
+# Chinese (Traditional, Taiwan) translations for PROJECT.
 # Copyright (C) 2018 ORGANIZATION
 # This file is distributed under the same license as the PROJECT project.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2018.
@@ -8,10 +8,10 @@ msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2018-04-04 16:37-0700\n"
-"PO-Revision-Date: 2018-04-03 16:35-0700\n"
+"PO-Revision-Date: 2018-04-04 16:27-0700\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language: zh\n"
-"Language-Team: zh <LL@li.org>\n"
+"Language: zh_Hant_TW\n"
+"Language-Team: zh_Hant_TW <LL@li.org>\n"
 "Plural-Forms: nplurals=1; plural=0\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -20,43 +20,43 @@ msgstr ""
 
 #: app/forms.py:10 app/forms.py:16 app/forms.py:33
 msgid "Username"
-msgstr "用户名"
+msgstr "用戶名"
 
 #: app/forms.py:11 app/forms.py:18 app/forms.py:57
 msgid "Password"
-msgstr "密码"
+msgstr "密碼"
 
 #: app/forms.py:12
 msgid "Remember me"
-msgstr "记住我"
+msgstr "記住我"
 
 #: app/forms.py:13
 msgid "Sign In"
-msgstr "登录"
+msgstr "登入"
 
 #: app/forms.py:17 app/forms.py:53
 msgid "Email"
-msgstr "电子邮箱"
+msgstr "電郵"
 
 #: app/forms.py:19 app/forms.py:58
 msgid "Repeat Password"
-msgstr "重复密码"
+msgstr "重複密碼"
 
 #: app/forms.py:20
 msgid "Register"
-msgstr "注册"
+msgstr "註冊"
 
 #: app/forms.py:25
 msgid "Please use a different username."
-msgstr "请用一个不同的用户名"
+msgstr "更換不一樣的用戶名"
 
 #: app/forms.py:30
 msgid "Please use a different email address."
-msgstr "请用一个不同的电子邮箱地址"
+msgstr "更換不一樣的電郵"
 
 #: app/forms.py:34
 msgid "About me"
-msgstr "关于我"
+msgstr "關於我"
 
 #: app/forms.py:35 app/forms.py:50
 msgid "Submit"
@@ -64,49 +64,49 @@ msgstr "提交"
 
 #: app/forms.py:46
 msgid "Please use a different username"
-msgstr "请用一个不同的用户名"
+msgstr "換一個不一樣的用戶名"
 
 #: app/forms.py:49
 msgid "Say something"
-msgstr "说点什么"
+msgstr "說點什麼"
 
 #: app/forms.py:54 app/forms.py:59
 msgid "Request Password Reset"
-msgstr "密码重置请求"
+msgstr "請求重置密碼"
 
 #: app/routes.py:22
 msgid "Your post is now live!"
-msgstr "您的帖子现在已经上线了"
+msgstr "帖子已經上線"
 
 #: app/routes.py:41
 msgid "Invalid username or password"
-msgstr "用户名或者密码不对"
+msgstr "無效的用戶名和密碼"
 
 #: app/routes.py:70
 msgid "Congratulation, you are now a registered user!"
-msgstr "恭喜你! 你已经完成了注册"
+msgstr "恭喜你! 你已經註冊成功"
 
 #: app/routes.py:102
 msgid "Your changes have been saved."
-msgstr "你的改动已经被保存"
+msgstr "變更已被保存"
 
 #: app/routes.py:120
 msgid "You cannot follow yourself!"
-msgstr "你不能关注你自己"
+msgstr "不能關注自己"
 
 #: app/routes.py:138
 msgid "You cannot unfollow yourself!"
-msgstr "你不能取消对你自己的关注"
+msgstr "不能取消對自己的關注"
 
 #: app/routes.py:164
 msgid "Check your email for the instructions to reset your password"
-msgstr "请根据电子邮件的指示重置密码"
+msgstr "根據電郵指示重置密碼"
 
 #: app/routes.py:179
 msgid "Your password has been reset."
-msgstr "你的密码已经被重置"
+msgstr "你的密碼已被重置"
 
 #: app/templates/404.html:4
 msgid "File Not Found"
-msgstr "对不起, 没有找到"
+msgstr "沒有找到"
 
